--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -912,6 +912,8 @@ a {
     padding: 0 200px 0 120px;
     line-height: 60px;
     font-size: 20px;
+    font-family: "Montserrat";
+    letter-spacing: 0.5px;
     &::placeholder{
       @include search_placeholder();
       color: $light-charcoal
@@ -1031,12 +1033,10 @@ padding: 135% 0 0 0;
 text-transform: capitalize;
 font-size: 25px;
 h2 {
-  font-size: 25px;
-  font-family: "Baskerville","Amiri","Serif";
-  color: #333;
+  @include h2_24px_lora_charcoal();
   line-height: 60px;
   text-transform: capitalize;
-  margin-top: 10px;
+  margin-top: 60px;
 }
 }
 
@@ -1124,10 +1124,11 @@ input {
 }
 .npf-msg {
 font-size: 20px;
-letter-spacing: 1px;
+letter-spacing: 0.5px;
+font-family: $font-Montserrat;
 color: tint(#000, 50%);
   span {
-    color: $cerise;
+    color: $gold;
   }
 }
 
