--- a/src/components/dropdown/baseDropdownMenu/styles.scss
+++ b/src/components/dropdown/baseDropdownMenu/styles.scss
@@ -25,6 +25,7 @@
   padding: 0 10px;
   align-items: center;
   justify-content: center;
+  width: max-content;
  &.disabled {
    span {
      color: #bbb;
