--- a/src/containers/search/styles.scss
+++ b/src/containers/search/styles.scss
@@ -372,11 +372,12 @@
     }
   }
   .menulevel2-view-all{
-    text-transform: uppercase; 
+    //text-transform: uppercase; 
     cursor: pointer;
     display: block;
-    font-size: 12px;
-    color: black;
+    // font-size: 12px;
+    // color: black;
+    @include b4_12px_montserrat_charcoal_caps();
   }
   .menulevel2 {
     @include b4_12px_montserrat_charcoal_caps();
