border and pointerchanges for search filter

--- a/src/containers/careerNew/components/Landing/landing.scss
+++ b/src/containers/careerNew/components/Landing/landing.scss
@@ -78,7 +78,7 @@
                 color: $default;
                 opacity: 1;
                 margin-top: 5%;
-                // padding: 0% 20% 0% 18%;
+                padding: 0% 10% 0% 10%;
 
                 @media screen and (max-width: 992px) {
                     display: none;
