--- a/src/components/Popups/styles.scss
+++ b/src/components/Popups/styles.scss
@@ -1167,6 +1167,7 @@
     justify-content: center;
     letter-spacing: 0.5px;
     min-width: 300px;
+    cursor: pointer;
     // &:hover{
     //   color: $white;
     //   background: $aqua-bold;
