--- a/src/components/Popups/styles.scss
+++ b/src/components/Popups/styles.scss
@@ -36,6 +36,7 @@
         margin: 0 auto;
       }
       .cross {
+        top:1px;
         border-bottom: 1px solid #f2f2f2;
             text-align: right;
             padding: 13px;
@@ -51,6 +52,9 @@
         background-color: transparent;
         right: 0;
         width: auto;
+      }
+      .cross-white-btn{
+        color: $white !important;
       }
       .cancel-btn {
       position: absolute;
@@ -1113,6 +1117,10 @@
 .top-image{
   width: 100%;
   height: 160px;
+
+  @media (min-width: 600px) and (max-width: 992px){
+    object-fit:cover;
+  }
 }
 
 .gc-tnc{
