--- a/src/components/Popups/styles.scss
+++ b/src/components/Popups/styles.scss
@@ -1219,12 +1219,18 @@
   }
 }
 
+@media (max-width: 991px){
+  .gc-tnc{
+    padding: 30px 0 30px 0 !important;
+  }
+}
+
 @media (max-width: 992px){
   .left-image{
     height: 160px;
   }
   .gc-tnc{
-    padding: 30px 0 30px 0 !important;
+    padding: 0 !important;
     img{
       background-color: #E5E5E5;
     }
