--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -930,12 +930,12 @@ a {
     }
   }
   .icon-search-popup {
-    cursor: pointer;
-    font-size: 24px;
-    color: $cerise;
+    // cursor: pointer;
+    font-size: 23px;
+    color: $charcoal19;
     position: absolute;
     top: 35%;
-    right: 3%;
+    left: 3%;
   }
   .icon-search-cross {
     cursor: pointer;
@@ -1063,7 +1063,6 @@ padding: 10px 0;
 // bottom: 0;
 width: 100vw;
 height: 150px;
-background-color: tint(#000, 90%);
 z-index: 10;
 padding: 10px 0;
 .count {
@@ -1072,14 +1071,18 @@ padding: 10px 0;
   font-size: 13px;
   letter-spacing: .5px;
 }
-p {
-  text-decoration: underline;
+button {
+  height: 50px;
+  width: 207px;
+  border: 0px;
   cursor: pointer;
   margin-top: 6px;
-  font-size: 15px;
-  color: $cerise;
+  font-size: 14px;
+  background-color: $med-charcoal;
+  color: white;
   text-transform: uppercase;
-  letter-spacing: 1px;
+  letter-spacing: .5px;
+  font-family: $font-Montserrat;
 }
 }
 
@@ -1106,8 +1109,8 @@ input {
 }
 .icon-search-popup {
 
-  font-size: 24px;
-  color: $cerise;
+  font-size: 23px;
+  color: $charcoal19;
   position: absolute;
   top: 30%;
   right: 3%;
