--- a/src/containers/giftcard/styles.scss
+++ b/src/containers/giftcard/styles.scss
@@ -400,6 +400,7 @@ input[type="radio"]:checked+label:before {
   }
   span:hover {
     border: 2px solid $aqua;
+    color: #3c7979;
     cursor: pointer;
   }
   .value-hover {
