--- a/src/components/Sizechart/styles.scss
+++ b/src/components/Sizechart/styles.scss
@@ -452,7 +452,8 @@
             min-width: 120px;
             max-width: 220px;
             width: auto;
-            padding-right: 60px;
+            // padding-right: 60px;
+            word-break: break-word;
           }
         }
       }
