--- a/src/containers/plp/styles.scss
+++ b/src/containers/plp/styles.scss
@@ -363,8 +363,9 @@
     }
   }
   .colorhead {
+    transition:max-height 0.3s ease-in;
     min-height: 55px;
-    max-height: 225px;
+    //max-height: 225px;
     overflow: scroll;
     &::-webkit-scrollbar {
       display: none;
@@ -631,7 +632,15 @@ input[type="radio"]:checked, [type="checkbox"]:not(:checked),
 }
 
 .showheader1 {
-  padding-bottom: 10px;
+  margin-bottom: 10px;
+  transition:max-height 0.3s ease-in;
+  overflow: hidden;
+}
+
+.hide-div{
+  overflow: hidden;
+  transition:max-height 0.3s ease-out;
+  max-height:0 ;
 }
 
 .size-list {
@@ -721,6 +730,8 @@ input[type="radio"]:checked, [type="checkbox"]:not(:checked),
 .custom-slider {
   .showheader1 {
     width: 90%;
+    transition:max-height 0.3s ease-in;
+    overflow: hidden;
   }
   .slider-custom {
     visibility: hidden;
