--- a/src/containers/search/slider.css
+++ b/src/containers/search/slider.css
@@ -4,6 +4,8 @@
 .custom-slider .showheader1 {
     width: 90%;
     padding-left: 5px;
+    transition:max-height 0.3s ease-in;
+    overflow: hidden;
 }
 .custom-slider .slider-custom {
     visibility: hidden;
