--- a/src/containers/search/styles.scss
+++ b/src/containers/search/styles.scss
@@ -328,8 +328,9 @@
     }
   }
   .colorhead {
+    transition:max-height 0.3s ease-in;
     min-height: 55px;
-    max-height: 225px;
+    // max-height: 225px;
     overflow: scroll;
     &::-webkit-scrollbar {
       display: none;
@@ -592,7 +593,30 @@ input[type="radio"]:checked, [type="checkbox"]:not(:checked),
 }
 
 .showheader1 {
-  padding-bottom: 10px;
+  margin-bottom: 10px;
+  transition:max-height 0.3s ease-in;
+  overflow: hidden;
+}
+
+.showheader2{
+  transition:max-height 0.3s ease-in;
+  overflow: hidden;
+}
+
+.hide-div{
+  overflow: hidden;
+  transition:max-height 0.3s ease-out;
+  max-height:0 !important;
+
+  .colorlabel {
+    label {
+      padding-left: 35px;
+      margin-bottom: 0;
+    }
+    .disableColors{
+      opacity: 0.5;
+    }
+  }
 }
 
 .size-list {
