--- a/src/containers/search/styles.scss
+++ b/src/containers/search/styles.scss
@@ -238,28 +238,25 @@
 
 .filter-elements {
   span {
-    @include plp_filter_cat();
-    font-weight: normal;
+    @include b4_12px_medium_medcharcoal_caps();
     padding-left: 0px;
   }
   ul {
     li {
       line-height: 15px;
       span {
-        text-transform: capitalize;
-        &:first-child {
-          @include plp_filter_header();
-        }
-        &.ellipses{
-          color: $med-charcoal !important;
-        }
-        color: $cerise;
-        &:last-child {
-          float: right;
-          cursor: pointer;
-          font-size: 6px;
-          color: tint(#000, 50%);
-        }
+          text-transform: capitalize;
+          &:first-child {
+            @include b6_9px_montserrat_charcoal();
+            line-height: 30px;
+            height: 30px;
+            color: $charcoal19 !important;
+          }
+          &:last-child {
+            cursor: pointer;
+            font-size: 8px;
+            color: $charcoal19 !important;
+          }
       }
     }
   }
@@ -271,14 +268,13 @@
   &::-webkit-scrollbar {
     display: none;
   }
-  margin: 0 20px 30px 20px;
+  margin: 0px 0px 30px 20px;
 
   li {
     letter-spacing: 0.5px;
     line-height: 40px;
     border-bottom: 1px solid tint(#000,90%);
-    @include b4_12px_montserrat_gold_caps();
-    font-weight: $medium;
+    @include b4_12px_medium_gold_caps();
     li {
       border-bottom: none;
       // padding-left: 20px;
@@ -288,13 +284,12 @@
         @include menu-copy();
       }
       li {
-        padding-left: 15px;
+        padding-left: 0px;
         label {
           white-space: nowrap;
           overflow: hidden;
           text-overflow: ellipsis;
           display: block;
-          cursor: pointer;
         }
 
       }
@@ -304,9 +299,10 @@
       @include plp_clear_filter();
       cursor: pointer;
       text-decoration: underline;
+      text-underline-offset: 2px;
       text-transform: capitalize;
       &:hover{
-        color: $aqua;
+        color: #3C7979;
       }
     }
   }
@@ -842,22 +838,21 @@ input[type="radio"]:checked, [type="checkbox"]:not(:checked),
 
 .filter-item-cross {
   right: 18px;
-  top: 3px;
+  top: 8px;
   position: relative;
   float: right;
   cursor: pointer;
   font-size: 10px;
   color: black !important;
-  height: 30px;
   width: 15px;
 }
 
 .filter-item {
-  background-color: rgba(0,0,0,0.1);
-  padding: 3px 25px 3px 10px !important;
-  border-radius: 20px;
+  background-color: #F2F2F2;
+  padding: 0px 30px 0px 10px !important;
+  border-radius: 13px;
   cursor: default;
-  color: $gold!important;
+  color: $charcoal19;
   margin-bottom: 10px;
 }
 
