--- a/src/containers/plp/styles.scss
+++ b/src/containers/plp/styles.scss
@@ -305,12 +305,16 @@
 }
 
 .filter-side-menu {
-  height: calc(100% - 60px);
+  height: calc(100vh - 185px);
   overflow:scroll;
   &::-webkit-scrollbar {
     display: none;
   }
   margin: 0px 0px 30px 20px;
+
+  @media screen and (max-width: 992px){
+    height: calc(100% - 60px);
+  }
 
   li {
     letter-spacing: 0.5px;
