--- a/src/components/footer/styles.scss
+++ b/src/components/footer/styles.scss
@@ -158,10 +158,11 @@
   bottom: 0;
   right: 0;
   width: 362px;
-  height: 230px;
+  // height: 230px;
+  min-height: 300px;
   background-color: #fff;
   z-index: 100;
-  padding: 10px 30px;
+  padding: 30px 40px;
   text-align: center;
   font-family: $font-Lato;
   margin: 20px;
@@ -184,18 +185,20 @@
     line-height: 30px;
     // text-transform: capitalize;
     // font-weight: bold;
-    letter-spacing: 0;
+    letter-spacing: 0.5px;
     padding: 10px 0 0 0;
     // margin-bottom: -30px;
   }
   p {
     @include b4_12px_montserrat_charcoal();
+    letter-spacing: 0.5px;
     // font-family: $font-Montserrat;
     // color: $charcoal19;
     // font-size: 12px;
     line-height: 20px;
     // margin-bottom: -15px;
     a {
+      letter-spacing: 0.5px;
       color: $gold;
       text-decoration: underline;
     }
@@ -207,6 +210,7 @@
     border-bottom: 1px solid $charcoal19;
     padding-left: 0;
     padding-right: 0;
+    letter-spacing: 0.5px;
 
     @media screen and (max-width: 500px) {
       margin-bottom: 33px;
@@ -250,6 +254,7 @@
     cursor: pointer;
     display: inline-block;
     border: 1px solid $med-charcoal;
+    letter-spacing: 0.5px;
     // font-size: 14px;
     &:hover{
       @include b3_14px_montserrat_caps_charcoal();
@@ -257,7 +262,10 @@
     }
   }
   .eu-btn{
-    padding: 15px 100px !important;
+    padding: 20px 100px !important;
+    width: 414px;
+    height: 58px;
+    text-align: center;
   }
 }
 
@@ -268,27 +276,33 @@
   right: 50%;
   transform: translate(-50%, -50%);
   text-align: left;
-  width: 500px;
-  height: 340px;
+  width: 510px;
+  // height: 340px;
 
   .heading{
+    letter-spacing: 0.5px;
     @include b3_14px_montserrat_caps_charcoal();
     margin-top: 10px;
   }
 
   hr{
-    border: 1px solid $light-beige;
+    border: 1px solid #E5E5E5;
     width: 100%;
   }
 
   .question{
+    padding-top: 25px;
+    letter-spacing: 0.5px;
     @include b3_14px_montserrat_charcoal();
   }
   
   .answer{
+    letter-spacing: 0.5px;
     @include b4_12px_montserrat_charcoal();
   }
   .prefhead{
+    padding-top: 25px;
+    letter-spacing: 0.5px;
     @include b2_14px_charcoal_lora();
   }
   .prefWrp{
@@ -312,23 +326,29 @@
     .prefBlock{
       display: flex;
       justify-content: space-between;
-      margin-bottom: 15px;
+      margin-top: 25px;
 
       .prefSubBlock{
         width: 75%;
         .prefQue{
           @include b4_12px_montserrat_charcoal();
           margin-bottom: 0px;
+          letter-spacing: 0.5px;
         }
         .prefAns{
           @include b4_12px_montserrat_light_charcoal();
           margin-bottom: 0px;
+          padding-top: 10px;
+          letter-spacing: 0.5px;
+          line-height: 19px
         }
       }
       .prefToggleWrp{
         .prefActive{
           @include b6_9px_light_montserrat_charcoal();
           padding: 0;
+          letter-spacing: 0.5px;
+          margin-left:-5px;
         }
       }
     }
@@ -338,45 +358,51 @@
   .btnWrp{
     display: flex;
     width: 100%;
-    justify-content: space-evenly;
+    justify-content: space-between;
 
     .savebtn{
       @include b3_14px_montserrat_caps_charcoal();
       background-color: $white;
-      padding: 15px 20px;
+      // padding: 15px 20px;
       // color: #fff;
       cursor: pointer;
       display: inline-block;
       border: 1px solid $med-charcoal;
+      width: 205px;
+      height: 50px;
+      letter-spacing: 0.5px;
       // font-size: 14px;
       &:hover{
         @include b3_14px_caps_aqua();
         color: #3C7979;
         border: 1px solid #3C7979;
       }
-      @media screen and (max-width: 992px) {
-        padding: 15px 0px;
-        width: 50%;
-      }
+      // @media screen and (max-width: 992px) {
+      //   padding: 15px 0px;
+      //   width: 50%;
+      // }
     }
   
     .acceptbtn{
       @include b3_14px_caps_white();
       background-color: $med-charcoal;
-      padding: 15px 40px;
+      // padding: 15px 40px;
       // color: #fff;
       cursor: pointer;
       display: inline-block;
       border: 1px solid $med-charcoal;
+      width: 205px;
+      height: 50px;
+      letter-spacing: 0.5px;
       // font-size: 14px;
       &:hover{
         @include b3_14px_montserrat_caps_charcoal();
         background-color: $white;
       }
-      @media screen and (max-width: 992px) {
-        padding: 15px 0px;
-        width: 50%;
-      }
+      // @media screen and (max-width: 992px) {
+      //   padding: 15px 0px;
+      //   width: 50%;
+      // }
     }
   }
   
@@ -482,7 +508,7 @@
 
   .cookieclass {
     width: 100%;
-    height: 235px;
+    // height: 235px;
     // padding: 10px 15px;
     // margin: 5px;
     padding: 0;
@@ -493,7 +519,7 @@
       padding-top: 20px;
     }
     p{
-      padding: 5px 50px;
+      padding: 5px 40px;
     }
     .ok-btn{
       width: 100%;
@@ -506,7 +532,7 @@
   .noneu{
     padding: 0;
     margin: 0;
-    top: calc(100% - 225px);
+    top: calc(100% - 285px);
     left: 0;
     bottom: 0;
     right: 0;
@@ -514,7 +540,7 @@
 
   .eucookieclass{
     // margin: 195px 1px 1px 1px;
-    top: calc(100% + 100px);
+    top: calc(100% + 135px);
     .ok-btn{
       text-align: center;
     }
@@ -523,7 +549,7 @@
   .euPref{
     margin: 0px;
     height: 100%;
-    top:49%;
+    top:50%;
 
     p{
       padding: 2px 20px;
@@ -531,7 +557,7 @@
     }
 
     .heading{
-      margin: 10px 0px 2px 0px;
+      margin: 30px 0px 2px 0px;
     }
   }
 }
