Remove PIN Code note

--- a/src/components/Address/styles.scss
+++ b/src/components/Address/styles.scss
@@ -383,7 +383,7 @@
   display: flex;
 }
 
-.pincode-msg, .contact-msg{
+.contact-msg{
   font-style: italic;
   font-size: 12px;
   margin-top: 5px;
